syntax = "proto3";
package tendermint.statesync;

option go_package = "github.com/tendermint/tendermint/proto/tendermint/statesync";

import "gogoproto/gogo.proto";
import "tendermint/types/types.proto";
import "tendermint/types/params.proto";

message SnapshotsRequest {}

message SnapshotsResponse {
  uint64 height   = 1;
  uint32 format   = 2;
  uint32 chunks   = 3;
  bytes  hash     = 4;
  bytes  metadata = 5;
}

message ChunkRequest {
  uint64 height = 1;
  uint32 format = 2;
  uint32 index  = 3;
}

message ChunkResponse {
  uint64 height  = 1;
  uint32 format  = 2;
  uint32 index   = 3;
  bytes  chunk   = 4;
  bool   missing = 5;
}

message LightBlockRequest {
  uint64 height = 1;
}

message LightBlockResponse {
  tendermint.types.LightBlock light_block = 1;
}

message ParamsRequest {
  uint64 height = 1;
}

message ParamsResponse {
  uint64                           height           = 1;
  tendermint.types.ConsensusParams consensus_params = 2
      [(gogoproto.nullable) = false];
}
